# ricky-lim.github.io

./: .envrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  _config.yml  branch-protection-rules.json  deploy.sh  index.html  index.md  package-lock.json  package.json  pyproject.toml
.lektor/: buildstate
_posts/: 2020-03-04-welcome-to-jekyll.markdown
about/: index.html
blog/: index.html
css/: app.1d463023.css  chunk-vendors.b54ef066.css
js/: app.45a6fa06.js  app.45a6fa06.js.map  chunk-vendors.9609ef81.js  chunk-vendors.9609ef81.js.map
kutubuku/: kutubuku.lektorproject
pagefind/: pagefind-entry.json  pagefind.en_13b74ba863.pf_meta  pagefind.en_1b80296957.pf_meta  pagefind.en_1cc929ed88.pf_meta  pagefind.en_1d10f33077.pf_meta  pagefind.en_1d116e8fdd.pf_meta  pagefind.en_1f822cbf17.pf_meta  pagefind.en_2085eb39a2.pf_meta  pagefind.en_234e954f22.pf_meta  pagefind.en_2f2f7ad966.pf_meta  pagefind.en_3116a19280.pf_meta  pagefind.en_3334188bc5.pf_meta  pagefind.en_3c3d85bc7e.pf_meta  pagefind.en_421cd6d289.pf_meta  pagefind.en_427ec386ef.pf_meta  pagefind.en_45f319201b.pf_meta  pagefind.en_45f9a5dcd5.pf_meta  pagefind.en_48e7baeef5.pf_meta  pagefind.en_4b89fa93c2.pf_meta  pagefind.en_4dd186c167.pf_meta  pagefind.en_5776a9c898.pf_meta  pagefind.en_5981bb96ea.pf_meta  pagefind.en_5d4942717f.pf_meta  pagefind.en_5ddce9ac54.pf_meta  pagefind.en_5f52323f8d.pf_meta  pagefind.en_60e163f486.pf_meta  pagefind.en_63df4a796e.pf_meta  pagefind.en_67f3d27fc8.pf_meta  pagefind.en_69d4745edc.pf_meta  pagefind.en_6baa4947ee.pf_meta  (+25 more)
src/: App.vue  (+2 more)
(+413 files in other folders)
