[project]
name = "ricky-lim-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rickylim", email = "rlim.email@gmail.com" }
]
dependencies = [
    "lektor>=3.3.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ricky_lim_github_io"]
