[project]
name = "ricky-lim-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rickylim", email = "rlim.email@gmail.com" }
]
dependencies = [
    "lektor>=3.3.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ricky_lim_github_io"]

[dependency-groups]
dev = [
    "bump-my-version>=1.0.2",
    "pre-commit>=3.5.0",
]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
